# atoms-visualizer

./: .gitignore  Cargo.toml  DEVELOPER_GUIDE.md  INDEX.md  PHYSICS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  web.err
data/: hf_he.html  hf_index.html  hf_test_He.alog  lda_H.html  lda_O.html  lda_index.html
data/openmx_lda/: Ar0.alog  H0.alog  He0.alog  K0.alog  Li0.alog  O0.alog
src/: atomic_data.rs  atomic_lda.rs  graphics.rs  main.rs  physics.rs  shader.wgsl
