[package]
name = "atoms"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.19"
winit = "0.29"
glm = "0.2.3"
rand = "0.8"
pollster = "0.3"
image = "0.24"
bytemuck = { version = "1.14", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
quick-xml = "0.31"
regex = "1"
once_cell = "1"

[[bin]]
name = "atoms"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
